shift fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 * {
     font-size: 20px;
-
 }
 
 body{
@@ -90,8 +89,8 @@ main.orders{
 }
 
 div.left-box{
-    border: 10px outset darkcyan;
     position: absolute;
+    border: 10px outset darkcyan;
     left: 8px;
     width: 18.5%;
     top:497px;
@@ -134,6 +133,10 @@ nav.left-box{
     align-content: center;
 }
 
+a{
+    margin: 4px;
+}
+
 a.curr{
     color: blue;
 }
@@ -144,12 +147,17 @@ a.left-box.curr{
 }
 
 a.orders.curr{
-    border-bottom: 3px solid darkcyan;
+    margin: 0;
+    border-left: 3px solid darkcyan;
+    border-right: 3px solid darkcyan;
+    display: flex;
+    align-items: center;
 }
 
 a:hover{
+    margin: 0;
     background: #29B3A5;
-    font-size: 25px;
+    font-size: 20px;
     border: 4px outset darkcyan;
     color: #343494;
 }
